  - Fixed Dutch "Proclaim Fourth Reich" not being available when conditions are met
  - Fixed Strength Ratio requierments in Dutch focusses
  - Fixed Neur Market cancelling without any reason so the focus works as expected
  - Fixed Dutch event ending up in Belgium. Old habbit
  - Fixed Dutch Grey Society decisions not being able to take when decision got cancelled.

 Content:
  - The idea "Fight With Communism" will now cancel if you become Emerging Outlook as either Lithuania, Latvia, Estonia, Finland or Poland
  - Added the idea "Fight With Communism" to Lithuania, Latvia, Estonia and Finland
  - Added a decision to allow anyone to join BRICS as long as India has formed BRICS
  - Added Unit and Ship name lists for the Netherlands
  - Changed starting focus for Dutch Fascist, needing them to be in power instead of starting a civil war
  - Buffed the monthly population gain for Dutch Agriculture economy path
  - Locked Dutch Groningen Branch in Regional Economy branch if you don't have oil searches
  - Buffed nationalist drift when having Willem-Alexander in High-Command in the Netherlands
  - Netherlands now start with lvl 3 agricultre tech
  - Removed trasury cost for "Expand Tullip Exports"
  - Add small stability bonusses in the Monarchist and Fascist branch in the Dutch focus tree.
  - Added an option to relocate the capital to Nanjing for Taiwan in their event

 Database:
  - Added a new trait "Former Interior Minister" to Abdiqasim Salad Hassan for Somalia
  - Changed the starting national leader of Somalia to Ali Mahdi Muhammad
  - Added the traits "Career Politican" and "Writer" to the Indian leader "Atal Bihari Vajpayee"
  - Changed some starting resources and buildings in the Netherlands

 Game Rules:
  - Added a new game rule to disable the Muslim Brotherhood Civil Wars if you do not want them to happen
  - Added allow achievements to several more game rules that do not impact the game flow fundamentally, but are just nice haves

 Graphics: