@@ -8036,6 +8036,7 @@ change_ruling_party_effect = {
 	# Rul Party Addition
 	set_temp_variable = { add_col_one = rul_party_temp }
 	custom_effect_tooltip = ruling_party_changed_tt
+
 	add_to_array = { ruling_party = add_col_one }
 
 	# Coalition Array Parameters
@@ -8057,34 +8058,41 @@ change_ruling_party_effect = {
 
 	# Enable Elections of 0 means that they have elections
 	if = { limit = { check_variable = { enable_elections = 0 } }
+		custom_effect_tooltip = ruling_party_changed_elections_tt
 		if = {
 			limit = {
 				check_variable = { rul_party_temp > -1 }
 				check_variable = { rul_party_temp < 4 }
 			}
-			set_politics = {
-				ruling_party = democratic
-				elections_allowed = yes
+			hidden_effect = {
+				set_politics = {
+					ruling_party = democratic
+					elections_allowed = yes
+				}
 			}
 		}
 		else_if = {
 			limit = {
 				check_variable = { rul_party_temp > 3 }
-				check_variable = { rul_party_temp < 11 }
+				check_variable = { rul_party_temp < 10 }
 			}
-			set_politics = {
-				ruling_party = communism
-				elections_allowed = yes
+			hidden_effect = {
+				set_politics = {
+					ruling_party = communism
+					elections_allowed = yes
+				}
 			}
 		}
 		else_if = {
 			limit = {
-				check_variable = { rul_party_temp > 10 }
+				check_variable = { rul_party_temp > 9 }
 				check_variable = { rul_party_temp < 12 }
 			}
-			set_politics = {
-				ruling_party = fascism
-				elections_allowed = yes
+			hidden_effect = {
+				set_politics = {
+					ruling_party = fascism
+					elections_allowed = yes
+				}
 			}
 		}
 		else_if = {
@@ -8092,9 +8100,11 @@ change_ruling_party_effect = {
 				check_variable = { rul_party_temp > 11 }
 				check_variable = { rul_party_temp < 20 }
 			}
-			set_politics = {
-				ruling_party = neutrality
-				elections_allowed = yes
+			hidden_effect = {
+				set_politics = {
+					ruling_party = neutrality
+					elections_allowed = yes
+				}
 			}
 		}
 		else_if = {
@@ -8102,21 +8112,26 @@ change_ruling_party_effect = {
 				check_variable = { rul_party_temp > 19 }
 				check_variable = { rul_party_temp < 24 }
 			}
-			set_politics = {
-				ruling_party = nationalist
-				elections_allowed = yes
+			hidden_effect = {
+				set_politics = {
+					ruling_party = nationalist
+					elections_allowed = yes
+				}
 			}
 		}
 	}
 	else = {
+		custom_effect_tooltip = ruling_party_changed_no_elections_tt
 		if = {
 			limit = {
 				check_variable = { rul_party_temp > -1 }
 				check_variable = { rul_party_temp < 4 }
 			}
-			set_politics = {
-				ruling_party = democratic
-				elections_allowed = no
+			hidden_effect = {
+				set_politics = {
+					ruling_party = democratic
+					elections_allowed = no
+				}
 			}
 		}
 		else_if = {
@@ -8124,9 +8139,11 @@ change_ruling_party_effect = {
 				check_variable = { rul_party_temp > 3 }
 				check_variable = { rul_party_temp < 11 }
 			}
-			set_politics = {
-				ruling_party = communism
-				elections_allowed = no
+			hidden_effect = {
+				set_politics = {
+					ruling_party = communism
+					elections_allowed = no
+				}
 			}
 		}
 		else_if = {
@@ -8134,9 +8151,11 @@ change_ruling_party_effect = {
 				check_variable = { rul_party_temp > 10 }
 				check_variable = { rul_party_temp < 12 }
 			}
-			set_politics = {
-				ruling_party = fascism
-				elections_allowed = no
+			hidden_effect = {
+				set_politics = {
+					ruling_party = fascism
+					elections_allowed = no
+				}
 			}
 		}
 		else_if = {
@@ -8144,9 +8163,11 @@ change_ruling_party_effect = {
 				check_variable = { rul_party_temp > 11 }
 				check_variable = { rul_party_temp < 20 }
 			}
-			set_politics = {
-				ruling_party = neutrality
-				elections_allowed = no
+			hidden_effect = {
+				set_politics = {
+					ruling_party = neutrality
+					elections_allowed = no
+				}
 			}
 		}
 		else_if = {
@@ -8154,9 +8175,11 @@ change_ruling_party_effect = {
 				check_variable = { rul_party_temp > 19 }
 				check_variable = { rul_party_temp < 24 }
 			}
-			set_politics = {
-				ruling_party = nationalist
-				elections_allowed = no
+			hidden_effect = {
+				set_politics = {
+					ruling_party = nationalist
+					elections_allowed = no
+				}
 			}
 		}
 	}
