@@ -18,6 +18,13 @@
 
  TT_game_over_warning: "§RGame Will End When Selecting This§!\n"
 
+ # Change ruling party tooltips
+ add_coalition_members_effect_TT: "§Y[add_coalition_scl]§! is added to our Ruling Coalition.\n"
+ remove_coalition_members_effect_TT: "§Y[add_coalition_scl]§! is removed from our Ruling Coalition.\n"
+ ruling_party_changed_tt: "§Y[add_coalition_scl]§! becomes the ruling party of our nation.\n"
+ ruling_party_changed_elections_tt: "Elections will be held.\n"
+ ruling_party_changed_no_elections_tt: "Elections will not be held.\n"
+
  # Generic Treasury Adjustment
  modify_treasury_effect_tt: "[THIS.GetFlag][THIS.GetAdjective] §YTreasury§!: $$[?treasury_change|+] Billion\n"
  has_more_than_temp_treasury_tt: "[THIS.GetFlag][THIS.GetAdjective] §YTreasury§! is greater than $$[?temp_treasury|+] (Current: $$[?treasury|3Y])\n"
@@ -25,9 +32,6 @@
  modify_international_investment_effect_tt: "[THIS.GetFlag][THIS.GetAdjective] §YInternational Investments§!: $$[?int_investment_change|+] Billion\n"
  modify_corporate_tax_rate_tt: "[THIS.GetFlag][THIS.GetAdjective] §YCorporate Tax Rate§! changes by [?corp_change|+0] (Current: [?THIS.corporate_tax_rate|Y0])\n"
  modify_population_tax_rate_tt: "[THIS.GetFlag][THIS.GetAdjective] §YPopulation Tax Rate§! changes by [?pop_change|+0] (Current: [?THIS.population_tax_rate|Y0])\n"
- add_coalition_members_effect_TT: "§Y[add_coalition_scl]§! is added to our Ruling Coalition.\n"
- remove_coalition_members_effect_TT: "§Y[add_coalition_scl]§! is removed from our Ruling Coalition.\n"
- ruling_party_changed_tt: "§Y[add_coalition_scl]§! becomes the ruling party of our nation.\n"
  10_percent_government_coalition_strength_tt: "Current §YGovernment Popularity§! > §Y10%§! (Current: [?government_coalition_strength|%1])"
  20_percent_government_coalition_strength_tt: "Current §YGovernment Popularity§! > §Y20%§! (Current: [?government_coalition_strength|%1])"
  30_percent_government_coalition_strength_tt: "Current §YGovernment Popularity§! > §Y30%§! (Current: [?government_coalition_strength|%1])"
@@ -256,7 +260,7 @@
  nationalist_fascists_are_not_in_power_or_coalition_tt: "§Y[Nat_Fascism_L]§! is not in ruling coalition." #21
  nationalist_military_junta_are_not_in_power_or_coalition_tt: "§Y[Nat_Autocracy_L]§! is not in ruling coalition." #22
  nationalist_monarchists_are_not_in_power_or_coalition_tt: "§Y[Monarchist_L]§! is not in ruling coalition." #23
- 
+
  has_pro_western_autocrat_coalition_TT_NOT: "§Y[Western_Autocracy_L]§! is not in ruling coalition." #0
  has_conservatism_coalition_TT_NOT: "§Y[conservatism_L]§! is not in ruling coalition." #1
  has_liberalism_coalition_TT_NOT: "§Y[liberalism_L]§! is not in ruling coalition." #2
@@ -865,7 +869,7 @@
  united_uar_for_coring_tt: "We have §YProclaimed The Unification of Arabs§!"
  TT_SYR_RENEGOTIATE_LOANS: "§YWe will negotiate on settling part of our debt§!"
  one_party_state_TT: "Will §Rban§! all parties except ours"
- 
+
  # Unlock/lock decision
  UNLOCK_DECISION_IN_CATEGORY: "Unlocks Decision $DECISION|Y$ in the $DECISION_CATEGORY|Y$ Category\n"
  LOCK_DECISION_IN_CATEGORY: "Locks Decision $DECISION|Y$ in the $DECISION_CATEGORY|Y$ Category\n"
