@@ -29,6 +29,8 @@ v1.12.1b
   - Fixed Neur Market cancelling without any reason so the focus works as expected
   - Fixed Dutch event ending up in Belgium. Old habbit
   - Fixed Dutch Grey Society decisions not being able to take when decision got cancelled.
+  - Fixed change party function placing a salafist party in emerging
+  - Fixed change party function showing the wrong next ruling party
 
  Content:
   - The idea "Fight With Communism" will now cancel if you become Emerging Outlook as either Lithuania, Latvia, Estonia, Finland or Poland
